// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[App] sidebar event 1`] = `
<div>
  <aside
    class="test sidebar-close"
    role="sidebar"
  >
    <h3
      class="sidebar-title"
    >
      <button
        class="sidebar-toggle"
      >
        <span
          class="material-icons"
        >
          menu
        </span>
      </button>
    </h3>
  </aside>
</div>
`;

exports[`[App] snapshot 1`] = `
<div>
  <div
    class="App"
  >
    <header
      class="App-header"
    >
      AppLayout Header
    </header>
    <aside
      class="App-sidebar left sidebar-open"
      role="sidebar"
    >
      <h3
        class="sidebar-title"
      >
        AppLayout
        <button
          class="sidebar-toggle"
        >
          <span
            class="material-icons"
          >
            menu
          </span>
        </button>
      </h3>
      <ul>
        <li>
          Item
        </li>
        <li>
          Item
        </li>
        <li>
          Item
        </li>
        <li>
          Item
        </li>
        <li>
          Item
        </li>
        <li>
          Item
        </li>
        <li>
          Item
        </li>
        <li>
          Item
        </li>
        <li>
          Item
        </li>
        <li>
          Item
        </li>
        <li>
          Item
        </li>
        <li>
          Item
        </li>
        <li>
          Item
        </li>
      </ul>
    </aside>
    <div
      class="App-container left"
      role="container"
    >
      AppLayout Container
    </div>
  </div>
</div>
`;
